--- a/TstoreSubTest/Base.lproj/Main.storyboard
+++ b/TstoreSubTest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4hy-Ou-7sb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="seO-Ie-1t0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -137,10 +137,11 @@
                             <outlet property="delegate" destination="4hy-Ou-7sb" id="Upq-ld-SAG"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="JKr-Pg-A7J"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CTv-1E-ocI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1448.8" y="41.829085457271368"/>
+            <point key="canvasLocation" x="1465" y="42"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="92H-OD-wnN">
